--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bobo",
+  "name": "bobo-fans",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "田士贞 <shizhen@jingdata.com>",
@@ -10,8 +10,6 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "node-sass": "^4.10.0",
-    "sass-loader": "^7.1.0",
     "vue": "^2.5.2"
   },
   "devDependencies": {
@@ -32,6 +30,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -39,6 +38,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
