--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
+    "markdown": "^0.5.0",
     "vue": "^2.5.2"
   },
   "devDependencies": {
