--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "crypto-js": "^3.1.9-1",
+    "markdown": "^0.5.0",
+    "qrcode": "^1.3.2",
     "vue": "^2.5.2"
   },
   "devDependencies": {
